repo-vcard/components/vcard/base/vcard-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vcard
  labels:
    app: vcard
spec:
  to:
    kind: Service
    name: vcard
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
